k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsegate
  labels:
    app.kubernetes.io/name: pulsegate
