k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsegate
  namespace: pulsegate
  labels:
    app: pulsegate
    version: "1.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pulsegate
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0     # Zero-downtime rolling updates
  template:
    metadata:
      labels:
        app: pulsegate
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: pulsegate
          image: ghcr.io/abhishek2k21/pulsegate:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
